# Protheus

./: .gitignore  CMakeLists.txt  Doxyfile  GCC.sh  Makefile.mk  Protheus Engine.sln  Protheus-Engine.pro  README.md  README.txt  Thumbs.db  Using Git.txt  debug.cxl  desktop.ini
BombMan/: Bomb.cpp  Bomb.h  BombMan.vcxproj  BombMan.vcxproj.filters  CST_Input.cpp  CST_Input.h  EntryPoint.cpp  Game.cpp
BombMan/Debug/: Network.sbr
BombMan/Engine/: AnimatedSprite.cpp  AnimatedSprite.h  Camera.cpp  Camera.h  Core.cpp  Core.h  Entity.cpp  Entity.h  IDManager.cpp  IDManager.h  Input.h  Inventory.cpp  Item.cpp  Map.cpp  Map.h  Name.cpp  Name.h  Network.cpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Sprite.h  SpriteEntity.h  SpriteManager.cpp  SpriteManager.h  TileMap.cpp  TileMap.h  Timer.h  Window.cpp  Window.h
BombMan/animations/: Player.txt
BombMan/levels/: demoLevel.txt  demoLevelData.txt
BombMan/textures/: SpriteSheet.txt
File Packer/: Protheus File Packer.sln
File Packer/Protheus File Packer/: Element.h  FileBrowser.cpp  FileBrowser.h  FileIndex.cpp  FileIndex.h  Protheus File Packer.cpp  Protheus File Packer.vcxproj  Protheus File Packer.vcxproj.filters
GameDemo/: Config.lua  Main.lua  Resources.lua
GameDemo/textures/: animations.txt
Protheus.xcodeproj/: project.pbxproj
Protheus.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SDL2/: SDL_VS2013.vcxproj  SDLmain_VS2013.vcxproj
SDL2/SDL/: SDL.cbp
SDL2/include/: SDL_rect.h
SDL2_image/: IMG_png.c  SDL2_image.vcxproj  SDL2_image.vcxproj.filters  SDL_image.h
SDL2_net/: SDL2_net.vcxproj  SDL2_net.vcxproj.filters  SDL_net.h  SDLnet.c  SDLnetselect.c  SDLnetsys.h
SDL2_ttf/: SDL2_ttf.vcxproj  SDL2_ttf.vcxproj.filters
TestCases/: HeightMapTest.cpp  KeyboardTest.cpp  LearnOGL.cpp  NetCommandTest.cpp  NetworkTest.cpp  OBJLoad.cpp  SmartPointersTest.cpp  SpriteBatcherLoad.cpp  WindowsTest.cpp
TestCases/scripts/: cpuinfo.py  install_deps.sh  protheus.conf  service.py  start.py
TestCases/shaders/: basic.frag  basic.vert  shader.frag
docs/: Audio.vsdx  Engine Flow.vsdx  FileSystem.vsdx  GUI File Documentation.vsdx  GUI Hierarchy.vsdx  GameFile.vsdx  Lua API.xlsx  Networking Flow.vsdx  Protheus Draft.docx  Tasks.accdb  ~$$Audio.~vsdx  ~$$Networking Flow.~vsdx
examples/: config.lua  log.txt
examples/buffers/: buffertest.lua
examples/gamemaker/: main.lua
examples/gui/: gui.lua
externlib/Win32/: glew32s.lib  glew32sd.lib
externlib/Win64/: glew32s.lib  glew32sd.lib
lib/: SDL2_image.lib  SDL2_ttf.lib  SDL2main.lib  zlib.lib
scr/: ClassDiagram.cd  EntryPoint.cpp  Game.cpp  Game.h  Menu.cpp  Menu.h  Protheus.aps  Protheus.vcxproj  Protheus.vcxproj.filters  SpriteBatcher.cpp  SpriteBatcher.h  config.lua  log.txt
scr/Engine/: ActiveState.cpp  ActiveState.h  AnimatedEntity.cpp  AnimatedEntity.h  AnimatedSprite.cpp  AnimatedSprite.h  Area.cpp  Area.h  Avatar.cpp  Avatar.h  BitCompare.h  CBuffer.h  CClientTCPConnection.h  CConnection.h  CFile.cpp  CFile.h  CGUID.cpp  CGUID.h  CNetwork.cpp  CNetwork.h  CScriptable.cpp  CScriptable.h  CServerTCPConnection.h  CTCPConnection.cpp  CTCPConnection.h  CTCPServer.h  Camera.cpp  Camera.h  CameraContainer.cpp  CameraContainer.h  ClassFlags.h  Components.h  Containers.h  Core.cpp  Core.h  DataGame.cpp  DataGame.h  Entity.cpp  Entity.h  EntityContainer.h  (+111 more)
scr/animations/: Explosion.txt
scr/levels/: demoLevelData.txt
scr/lua/: lauxlib.c  liolib.c  luac.c
scr/main/: main.lua
scr/script/: Config.lua  Main.lua  Resources.lua
scr/test/: mai_n.lua  main.lua  networking.lua  text.lua
src/Audio/: Audio.cpp  Audio.h  Audio.vcxproj  Audio.vcxproj.filters  CAudioBuffer.h  CAudioSource.h  CAudioTrack.h  WavDecoder.h
src/Core/: Core.vcxproj  Core.vcxproj.filters  Shader.cpp  Shader.h
src/Core_Test/: AnimatedSpriteBatcher.h  AnimatedSpriteTest.cpp  Audio.cpp  Breakout.cpp  Core_Test.vcxproj  Core_Test.vcxproj.filters  LearnOGL.cpp  OpenCLTest.cpp  SpriteBatcher.cpp  SpriteBatcherLoad.cpp  TextureLoading.cpp  log.xml  scenetestcpp.cpp
src/DataStructures/: BitCompare.h  BufferIO.cpp  BufferIO.h  BufferReader.h  BufferWriter.cpp  BufferWriter.h  CBuffer.cpp  CBuffer.h  ClassDefinition.h  DataStructures.h  DataStructures.vcxproj  DataStructures.vcxproj.filters  Error.cpp  Error.h  Matrix33.h  Timer.cpp  Timer.h  Vector2.h  Vector3.h  Vector4.cpp  Vector4.h
src/Editor/: Editor.vcxproj  Editor.vcxproj.filters  binding.gyp  index.js  package-lock.json  package.json
src/Engine/: Engine.vcxproj  Engine.vcxproj.filters
src/Engine_Test/: Engine_Test.vcxproj  Engine_Test.vcxproj.filters  Entity.cpp  MCMPQueueTest.cpp  System.cpp  Vector3Test.cpp  Vector4Test.cpp  stdafx.h
src/Graphics/: Graphics.cpp  Graphics.h  Graphics.vcxproj  Graphics.vcxproj.filters  ITextureLoader.cpp  ITextureLoader.h  Window.cpp  Window.h  glcorearb.h
src/Networking/: CClientTCPConnection.cpp  CClientTCPConnection.h  CConnection.cpp  CConnection.h  CTCPConnection.cpp  Networking.vcxproj  Networking.vcxproj.filters  SDL_net.h
src/Protheus/: Audio.cpp  Components.h  DataGame.cpp  DataGame.h  FlightSim.cpp  Fluid.cpp  GUIDLookup.h  GameObjects.h  GameState.cpp  Gamestate.h  Hoop.h  LearnOGL.cpp  Main.cpp  Main.h  Math.h  Plane.h  Protheus.vcxproj  Protheus.vcxproj.filters  ScriptGame.cpp  ScriptGame.h  ShaderCode.h  ShaderFactory.cpp  ShaderFactory.h  Skybox.h  StateStack.cpp  config.lua
src/SDL2/: SDL_VS2013.vcxproj  SDLmain_VS2013.vcxproj
src/SDL2_image/: IMG_png.c  SDL2_image.vcxproj  SDL2_image.vcxproj.filters
src/SDL2_net/: SDL2_net.vcxproj  SDLnetselect.c
src/SDL2_ttf/: SDL2_ttf.vcxproj
src/Test/: LearnOGL.cpp  Main.cpp  SpriteBatcher.cpp  Test.vcxproj  Test.vcxproj.filters  log.txt  shader.frag  shader.vert  spritebatcher.frag  spritebatcher.vert
src/UnitTests/: Buffer.cpp  Entity.cpp  LinkedListTest.cpp  MatrixTest.cpp  ParallelTest.cpp  PipeTest.cpp  QueueTest.cpp  UnitTests.vcxproj  Vector2Test.cpp  (+2 more)
vs15/: Protheus Engine.sln
vs19/: Protheus Engine.sln
vs2014/: Protheus Engine.sln  Utilities.testsettings  Utilities_Test.psess  Utilities_Test150104.vsp
(+667 files in other folders)
